--- a/Mighty Ducks Hockey League task 2 - PabloZalazar/about.html
+++ b/Mighty Ducks Hockey League task 2 - PabloZalazar/about.html
@@ -5,30 +5,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link rel="stylesheet" href="./assets/style/design1.css"> -->
+  <!-- <link rel="stylesheet" href="./assets/style/design2.css"> -->
+  <link rel="stylesheet" href="./assets/style/design3.css">
+  <link rel="icon" type="image/x-icon" href="./assets/img/icon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 
 <body>
   <header>
-    <img src="./assets/LogoMightyducks01.png" alt="Logo" width="200">
-    <div>
-      <h1>Mighty Ducks Hockey League</h1>
-      <nav>
-        <u><a href="./index.html">Home</a></u>
-        <b><u><a href="#">About MDHL</a></u></b>
-        <u><a href="./contact.html">Contact</a></u>
-      </nav>
-    </div>
+    <h1>Mighty Ducks Hockey League</h1>
+    <div></div>
   </header>
 
-  <main>
-    <aside>
-      <figure>
-        <img src="./assets/hockey2.jpg" alt="imagen 2" width="200">
-        <figcaption>Imagen 2</figcaption>
-      </figure>
-    </aside>
+  <h2 class="pageTitle">Contact</h2>
 
+  <nav>
+    <a href="./index.html">Home</a>
+    <a href="#">About MDHL</a>
+    <a href="./contact.html">Contact</a>
+  </nav>
+
+  <figure class="logo">
+    <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
+  </figure>
+
+  <main>
     <div>
       <article>
         <h2>Mision</h2>
@@ -64,6 +67,12 @@
       </article>
     </div>
   </main>
+
+  <aside>
+    <figure>
+      <img src="./assets/img/hockey2.jpg" alt="image 1">
+    </figure>
+  </aside>
 </body>
 
 </html>
