--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="./assets/style/design1.css"> -->
-  <!-- <link rel="stylesheet" href="./assets/style/design2.css"> -->
-  <link rel="stylesheet" href="./assets/style/design3.css">
+  <link rel="stylesheet" href="./assets/style/design.css">
   <link rel="icon" type="image/x-icon" href="./assets/img/icon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Document</title>
@@ -16,33 +14,37 @@
 <body>
   <header>
     <h1>Mighty Ducks Hockey League</h1>
-    <div></div>
+    <nav>
+      <a href="./index.html">Home</a>
+      <a href="./about.html">About MDHL</a>
+      <a href="#">Contact</a>
+      <a href="./rulesPolicies.html">Policies</a>
+      <a href="./gameInformation.html">Game Information</a>
+    </nav>
+    <div class="portada"></div>
+    <figure class="logo">
+      <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
+    </figure>
   </header>
 
-  <h2 class="pageTitle">About MDHL</h2>
 
-  <nav>
-    <a href="./index.html">Home</a>
-    <a href="./about.html">About MDHL</a>
-    <a href="#">Contact</a>
-  </nav>
-
-  <figure class="logo">
-    <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
-  </figure>
 
   <main>
-    <div class="contact">
+    <div class="subTitle">
+      <h2>About MDHL</h2>
+    </div>
+
+    <div class="content">
       <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
       <p>We reply to your email as soon as we can.</p>
     </div>
-  </main>
 
-  <aside>
-    <figure>
-      <img src="./assets/img/hockey3.jpg" alt="image 1">
-    </figure>
-  </aside>
+    <aside>
+      <figure>
+        <img src="./assets/img/hockey3.jpg" alt="image 3">
+      </figure>
+    </aside>
+  </main>
 </body>
 
 </html>
