--- a/about.html
+++ b/about.html
@@ -5,36 +5,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="./assets/style/design1.css"> -->
-  <!-- <link rel="stylesheet" href="./assets/style/design2.css"> -->
-  <link rel="stylesheet" href="./assets/style/design3.css">
+  <link rel="stylesheet" href="./assets/style/design.css">
   <link rel="icon" type="image/x-icon" href="./assets/img/icon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 
+
+
 <body>
   <header>
     <h1>Mighty Ducks Hockey League</h1>
-    <div></div>
+    <nav>
+      <a href="./index.html">Home</a>
+      <a href="#">About MDHL</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./rulesPolicies.html">Policies</a>
+      <a href="./gameInformation.html">Game Information</a>
+    </nav>
+    <div class="portada"></div>
+    <figure class="logo">
+      <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
+    </figure>
+
   </header>
 
-  <h2 class="pageTitle">Contact</h2>
-
-  <nav>
-    <a href="./index.html">Home</a>
-    <a href="#">About MDHL</a>
-    <a href="./contact.html">Contact</a>
-  </nav>
-
-  <figure class="logo">
-    <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
-  </figure>
 
   <main>
-    <div>
+    <div class="subTitle">
+      <h2>Contact</h2>
+    </div>
+
+    <div class="content">
       <article>
-        <h2>Mision</h2>
+        <h3>Mision</h3>
         <p>
           To support young athletes living Chicago's northside neighborhood, who have an interest in learning and
           playing soccer, with
@@ -45,7 +49,7 @@
       </article>
 
       <article>
-        <h2>Vision</h2>
+        <h3>Vision</h3>
         <p>
           The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the
           building of character,
@@ -54,7 +58,7 @@
       </article>
 
       <article>
-        <h2>General Information</h2>
+        <h3>General Information</h3>
         <p>
           The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside
           neighborhoods an
@@ -66,13 +70,13 @@
         </p>
       </article>
     </div>
-  </main>
 
-  <aside>
-    <figure>
-      <img src="./assets/img/hockey2.jpg" alt="image 1">
-    </figure>
-  </aside>
+    <aside>
+      <figure>
+        <img src="./assets/img/hockey2.jpg" alt="image 2">
+      </figure>
+    </aside>
+  </main>
 </body>
 
 </html>
