--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="./assets/style/design1.css"> -->
-  <!-- <link rel="stylesheet" href="./assets/style/design2.css"> -->
-  <link rel="stylesheet" href="./assets/style/design3.css">
+  <link rel="stylesheet" href="./assets/style/design.css">
   <link rel="icon" type="image/x-icon" href="./assets/img/icon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Home</title>
@@ -16,23 +14,27 @@
 <body>
   <header>
     <h1>Mighty Ducks Hockey League</h1>
-    <div></div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="./about.html">About MDHL</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./rulesPolicies.html">Policies</a>
+      <a href="./gameInformation.html">Game Information</a>
+    </nav>
+    <div class="portada"></div>
+    <figure class="logo">
+      <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
+    </figure>
   </header>
 
-  <h2 class="pageTitle">Upcoming Events</h2>
 
-  <figure class="logo">
-    <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
-  </figure>
-
-  <nav>
-    <a href="#">Home</a>
-    <a href="./about.html">About MDHL</a>
-    <a href="./contact.html">Contact</a>
-  </nav>
 
   <main>
-    <div>
+    <div class="subTitle">
+      <h2>Upcoming Events</h2>
+    </div>
+
+    <div class="content">
       <article>
         <h3>August 4</h3>
         <p>MDSL Fundraiser</p>
@@ -48,13 +50,13 @@
         <p>First Game of the Season (Check Game Schedule for details)</p>
       </article>
     </div>
-  </main>
 
-  <aside>
-    <figure>
-      <img src="./assets/img/hockey1.jpg" alt="image 1">
-    </figure>
-  </aside>
+    <aside>
+      <figure>
+        <img src="./assets/img/hockey1.jpg" alt="image 1">
+      </figure>
+    </aside>
+  </main>
 </body>
 
 </html>
