--- a/gameInformation.html
+++ b/gameInformation.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style/design.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/icon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>information</title>
 </head>
 
 <body>
@@ -20,14 +20,13 @@
             <a href="./contact.html">Contact</a>
             <a href="./rulesPolicies.html">Policies</a>
             <a href="#">Game Information</a>
+            <a href="./registration.html">Registration</a>
         </nav>
         <div class="portada"></div>
         <figure class="logo">
             <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
         </figure>
     </header>
-
-
 
     <main>
         <div class="rulesContainer">
@@ -36,7 +35,6 @@
                 <p>* All games take place on Saturday</p>
             </div>
             <table>
-
                 <thead>
                     <tr>
                         <th>SEPTEMBER</th>
@@ -100,10 +98,53 @@
                         <td>Greenbay</td>
                         <td>9:30 a.m.</td>
                     </tr>
-
                 </tbody>
             </table>
 
+            <div class="maps">
+                <div>
+                    <h3>AJ Katzenmaier</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7804581651785!2d-87.86499328432257!3d42.32588114525164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675533421448!5m2!1ses-419!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div>
+                    <h3>Greenbay</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.010447455554!2d-87.87072215661884!3d42.32097592059201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f933bce5af881%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses!2sar!4v1675534011352!5m2!1ses!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div>
+                    <h3>Howard A Yeager</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23604.98093388346!2d-87.87041423645523!3d42.3079172912909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675533556245!5m2!1ses-419!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div>
+                    <h3>Marjorie P Hart</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896536436588!2d-87.64816138433179!3d41.9296268701666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1675533582429!5m2!1ses-419!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div>
+                    <h3>North Academy</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3104.8520514478782!2d-104.77795548439902!3d38.904498454130206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87134f131a724d43%3A0x491f7a0843add5cb!2sN%20Academy%20Blvd%2C%20Colorado%2C%20EE.%20UU.!5e0!3m2!1ses!2sar!4v1675718431688!5m2!1ses!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div>
+                    <h3>South Academy</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3109.47033834284!2d-104.7598552844013!3d38.79877506035604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87134470342cc527%3A0x34a413ea2074064d!2sS%20Academy%20Blvd%2C%20Colorado%20Springs%2C%20CO%2C%20EE.%20UU.!5e0!3m2!1ses!2sar!4v1675718460772!5m2!1ses!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
             <div>
                 <p><span>Facility Type: </span>Outdoor</p>
                 <p><span>Addiotional Information: </span>If deemed necessary by MDHL games may be shortened or cancelled
