--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
       <a href="./contact.html">Contact</a>
       <a href="./rulesPolicies.html">Policies</a>
       <a href="./gameInformation.html">Game Information</a>
+      <a href="./registration.html">Registration</a>
     </nav>
     <div class="portada"></div>
     <figure class="logo">
       <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
     </figure>
   </header>
-
-
 
   <main>
     <div class="subTitle">
