--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./assets/style/design.css">
   <link rel="icon" type="image/x-icon" href="./assets/img/icon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Contact</title>
 </head>
 
 <body>
@@ -20,14 +20,13 @@
       <a href="#">Contact</a>
       <a href="./rulesPolicies.html">Policies</a>
       <a href="./gameInformation.html">Game Information</a>
+      <a href="./registration.html">Registration</a>
     </nav>
     <div class="portada"></div>
     <figure class="logo">
       <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
     </figure>
   </header>
-
-
 
   <main>
     <div class="subTitle">
