--- a/rulesPolicies.html
+++ b/rulesPolicies.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style/design.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/icon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Policies</title>
 </head>
 
 <body>
@@ -20,14 +20,13 @@
             <a href="./contact.html">Contact</a>
             <a href="#">Policies</a>
             <a href="./gameInformation.html">Game Information</a>
+            <a href="./registration.html">Registration</a>
         </nav>
         <div class="portada"></div>
         <figure class="logo">
             <img src="./assets/img/LogoMightyducks01.png" alt="Logo">
         </figure>
     </header>
-
-
 
     <main>
         <div class="rulesContent">
@@ -44,7 +43,6 @@
                     team, parent, spectator, administrator or referee whose behavior detracts from
                     this purpose is subject to disciplinary action regardless of technical hockey
                     background, expertise, accomplishments or standing.
-
                 </p>
             </article>
 
